css/style.css
/* ... */
.main-footer.inner-page {
	margin-top: 4px;
}

.main-footer svg {
	display: block;
}

.main-footer a {
	color: #ffffff;
}

.main-footer-container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
}

.main-footer-top,
.main-footer-middle {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	    -ms-flex-pack: justify;
	        justify-content: space-between;
}

.main-footer-top {
	margin-bottom: 29px;
}

.main-footer-middle {
	min-height: 40px;
	margin-bottom: 54px;
}

.main-footer-bottom {
	min-height: 36px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	    -ms-flex-pack: justify;
	        justify-content: space-between;
}

.main-footer-logo {
	margin-left: -1px;
	display: block;
	width: 163px;
	height: 36px;
}

.main-footer-logo:hover,
.main-footer-logo:focus {
	opacity: .6;
}

.main-footer-logo:active {
	opacity: .3;
}

.main-footer-top .right-column {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	margin-top: -5px;
}

.main-footer-site-navigation,
.main-footer-user-navigation,
.main-footer-goods-actions,
.main-footer-social {
	margin: 0;
	padding: 0;

	list-style: none;
}

.main-footer-user-navigation,
.main-footer-goods-actions {
	line-height: 36px;
	letter-spacing: .2em;
}

.main-footer-user-navigation {
	margin-right: 25px;
}

.main-footer-goods-actions {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	    -ms-flex-pack: justify;
	        justify-content: space-between;
	width: 212px;
}

.main-footer-goods-actions li:not(:last-of-type) {
	padding-right: 10px;
}

.main-footer-user-navigation {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	width: 300px;
}

.main-footer-user-navigation li {
	padding-right: 19px;
}

.main-footer-user-navigation li:first-of-type {
	margin-left: auto;
}

.main-footer-user-navigation a,
.main-footer-goods-actions a {
	color: #ffffff;
	letter-spacing: .01em;

	opacity: .7;
}

.main-footer-user-navigation a:hover,
.main-footer-user-navigation a:focus,
.main-footer-goods-actions a:hover,
.main-footer-goods-actions a:focus {
	opacity: 1;
}

.main-footer-user-navigation a:active,
.main-footer-goods-actions a:active {
	opacity: .3;
}

.main-footer-user-login a::before {
	content: "";
	display: inline-block;
	width: 13px;
	height: 12px;
	margin-right: 12px;

	vertical-align: baseline;

	background-image: url("../img/icons/user_icon_footer.svg");
	background-repeat: no-repeat;
	background-position: 0 0;
}

.main-footer-goods-compare a::before {
	content: "";
	display: inline-block;
	width: 10px;
	height: 10px;
	margin-right: 10px;

	vertical-align: baseline;

	background-image: url("../img/icons/compare_icon_footer.svg");
	background-repeat: no-repeat;
	background-position: 0 0;
}

.main-footer-goods-cart a::before {
	content: "";
	display: inline-block;
	width: 12px;
	height: 12px;
	margin-right: 10px;

	vertical-align: baseline;

	background-image: url("../img/icons/cart_icon_footer.svg");
	background-repeat: no-repeat;
  	background-position: 0 0;
}

.main-footer-middle p {
	width: 260px;
	margin: 0;
	-ms-flex-negative: 0;
	    flex-shrink: 0;
}

.main-footer-middle p.address {
	width: 258px;
}

.main-footer-middle *:last-child {
	text-align: right;
}

.main-footer-site-navigation a:hover,
.main-footer-site-navigation a:focus {
	color: rgba(255, 255, 255, .6);
}

.main-footer-site-navigation a:active {
	color: rgba(255, 255, 255, .3);
}

.main-footer-site-navigation {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	    flex-wrap: wrap;
	padding-top: 8px;

	font-family: "gilroy", Arial, sans-serif;
	font-weight: 900;
	font-size: 18px;
	line-height: 1.2;
	letter-spacing: .2em;
	text-transform: uppercase;
}

.main-footer-site-navigation li {
	margin-right: 15px;
	margin-left: 19px;
}

.main-footer-bottom .right-column {
	width: 80px;
	height: 36px;
	padding-left: 53px;
}

.main-footer-copyright-logo {
	display: block;
	width: 27px;
	height: 35px;
	margin-top: -2px;
}

.main-footer-copyright-logo:hover,
.main-footer-copyright-logo:focus {
	opacity: .6;
}

.main-footer-copyright-logo:active {
	opacity: .3;
}

.main-footer-bottom .right-column {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}

.main-footer-social {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	    flex-wrap: wrap;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	width: 248px;
}

.main-footer-social li {
	margin-bottom: 5px;
}

.main-footer-social li:not(:nth-of-type(5n+5)):not(:last-of-type) {
	margin-right: 22px;
}

.main-footer-social a {
	display: block;
	width: 32px;
	height: 32px;

	border-radius: 50%;
	opacity: .3;
}

.main-footer-social a:hover,
.main-footer-social a:focus {
	opacity: .6;
}

.main-footer-social a:active {
	opacity: .1;	
}

.main-footer-bottom::before {
	display: block;
	content: "";
	margin-top: 13px;
	margin-bottom: 12px;
	width: 80px;
	height: 7px;

	background-color: #ffc600;
}

/* ============== MODAL ============== */


@-webkit-keyframes modal-appear {
	0% {
	-webkit-transform: scale(0);
	        transform: scale(0);
	}

	50% {
	-webkit-transform: scale(20%);
	        transform: scale(20%);
	}

	90% {
	-webkit-transform: scale(90%);
	        transform: scale(90%);
	}

	100% {
	-webkit-transform: scale(100%);
	        transform: scale(100%);
	}
}
/* ... */

